--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
     <main class="container">
       <p class="container__titulo">Bienvenidos a TODOS EN BICICLETA</p>
       <section class="container__info">
-        <p>Locos por las bicis, somos ciclistas, y sabemos las necesidades de los ciclistas. Aquí encontrarás bicicletas mountain-bike, ruteras, descenso de montaña, infantiles, plegables, eléctricas.</p>
+        <p class="container__info__parrafo">Locos por las bicis, somos ciclistas, y sabemos las necesidades de los ciclistas. Aquí encontrarás bicicletas mountain-bike, ruteras, descenso de montaña, infantiles, plegables, eléctricas.</p>
 
-        <p>Además tenemos todos los accesorios necesarios para que disfrutes, y te aconsejamos todo lo relativo a la seguridad: cascos, guantes, luces, asientos, infladores, alforjas, repuestos en general.</p>
+        <p class="container__info__parrafo">Además tenemos todos los accesorios necesarios para que disfrutes, y te aconsejamos todo lo relativo a la seguridad: cascos, guantes, luces, asientos, infladores, alforjas, repuestos en general.</p>
       </section>
 
       <section class="container__imagenes">
@@ -81,6 +81,7 @@
         <p>Ir al sitio</p>
       </div>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="./js/recorridos.js"></script>
     <script src="./js/main.js"></script>
   </body>
