--- a/pages/carrito.html
+++ b/pages/carrito.html
@@ -32,6 +32,7 @@
       <section id="carrito-container"></section>
       <div id="total-container">
         <span class="total-compra">Total: $ <span id="total-compra">0</span></span>
+       <a href="./checkout.html"> <button class="checkout">Finalizar Compra</button></a>
       </div>
     </main>
 
