--- a/pages/AboutUs.html
+++ b/pages/AboutUs.html
@@ -53,7 +53,7 @@
           <img src="../img/img-bicis/youtube.png" alt="imagen logo youtube" />
         </a>
 
-        <a href="mailto:ignaciolopezbarg@hotmail.com"
+        <a href="mailto:igna@hotmail.com"
           ><img src="../img/img-bicis/mail.png" alt="imagen mail"
         /></a>
 
