--- a/pages/carrito.html
+++ b/pages/carrito.html
@@ -42,7 +42,7 @@
         <a href="https://www.facebook.com"><img src="../img/img-bicis/facebook.webp" alt="Facebook"></a>
         <a href="https://www.x.com"><img src="../img/img-bicis/x.png" alt="Red X"></a>
         <a href="https://www.youtube.com/watch?v=-EtJlo1VLMU"><img src="../img/img-bicis/youtube.png" alt="YouTube"></a>
-        <a href="mailto:ignaciolopezbarg@hot.com"><img src="../img/img-bicis/mail.png" alt="Email"></a>
+        <a href="mailto:ignaci@hot.com"><img src="../img/img-bicis/mail.png" alt="Email"></a>
         <a href="tel:+9900478999999"><img src="../img/img-bicis/tel1.jpeg" alt="Teléfono"></a>
         <a href="../pages/faq.html"><img src="../img/img-bicis/faq.png" alt="FAQ"></a>
         <a href="../pages/AboutUs.html"><img src="../img/img-bicis/aboutus.jpg" alt="About Us"></a>
