--- a/pages/ofertas.html
+++ b/pages/ofertas.html
@@ -156,7 +156,7 @@
   
   
   
-  <a href="mailto:ignaciolopezbarg@hot.com"><img src="../img/img-bicis/mail.png" alt="imagen mail"></a>
+  <a href="mailto:ig@hot.com"><img src="../img/img-bicis/mail.png" alt="imagen mail"></a>
   <a href="tel:+9900478999999">
     <img src="../img/img-bicis/tel1.jpeg" alt="imagen telefono">
   </a>
