--- a/pages/registro.html
+++ b/pages/registro.html
@@ -38,7 +38,7 @@
         sitio!!
       </p>
       <form
-        action="mailto:ignaciolopezbarg@hotmail.com"
+        action="mailto:igna@hot.com"
         method="get"
         enctype="multipart/form-data"
       >
