--- a/index.html
+++ b/index.html
@@ -62,7 +62,9 @@
         </div>
       </section>
     </main>
-
+<div id="anuncio"><a href="./pages/faq.html"><p class="anuncio">
+  Si queres mas info acerca de nosotros hace click en el enlace
+</p></a> </div>
     
     <footer class="pie">
       <div class="pie__redes">
