--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <meta name="description" content="somos una empresa familiar  con mas de 30 años en el rubro para la atencion 
+    integral de los problemas referidos al ciclismo, comercializacion y servicios con salidas a puntos turisticos">
+    <meta name="keywords" content="Bicicletas, Cascos, Indumentaria, Cicloturismo">
+
     <title>Carrito de Compra - Todos en Bicicleta</title>
     <link rel="stylesheet" href="./css/index.css" />
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
