--- a/index.html
+++ b/index.html
@@ -19,6 +19,15 @@
       <section class="encabezado__nombre">
         <p>TODOS EN BICICLETA</p>
       </section>
+      <div id="container">
+        <button type="button" id="light">
+            <i class="material-icons">light_mode</i>
+        
+        </button>
+        <button type="button" id="dark">
+            <i class="material-icons">dark_mode</i>
+        </button>
+    </div>
       <nav>
         <ul>
           <details>
@@ -91,6 +100,7 @@
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="./js/recorridos.js"></script>
     <script src="./js/main.js"></script>
+    <script src="./js/modo.js"></script>
   </body>
 </html>
 
